# gp-tree

./: .gitignore  .gitmodules  README.MD
crime/: CMakeLists.txt  main.cpp  main.py
housing/: CMakeLists.txt  housing_2012_flats.csv  main.cpp  main.py
luxembourg/: CMakeLists.txt  main.cpp  main.py  main_online.cpp  old.py
magic/: main.cpp  main.py
